# federated-search

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  test_live.py
federation/: config.py  federation.py  filters.py  formatter.py  server.py  types.py
federation/plugins/: base.py  flex.py  gmail.py  google_calendar.py  kg.py  searxng.py
skills/: federation-plugin-dev.md
